--- a/task1/task011/style.css
+++ b/task1/task011/style.css
@@ -30,22 +30,24 @@ header>span{
 }
 nav{
 	height:70px;
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
-	flex-flow:row nowrap;
+	-webkit-flex-flow:row nowrap;
+	    -ms-flex-flow:row nowrap;
+	        flex-flow:row nowrap;
 	felx-derection:row;
-	flex-wrap:nowrap;
+	-webkit-flex-wrap:nowrap;
+	    -ms-flex-wrap:nowrap;
+	        flex-wrap:nowrap;
 	background:#fff;
 }
 nav>p{
-	-moz-box-flex: 1;
-	 -webkit-box-flex: 1;
 	-o-box-flex: 1;
 	-ms-flex: 1;
-	flex: 1;
+	-webkit-flex: 1;
+	        flex: 1;
 	text-align: center;
 	line-height: 70px;
 	font-size: 20px;
@@ -63,23 +65,25 @@ nav>p:hover{
 	background:#fff;
 }
 .tab .tab-content{
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
-	flex-flow:row nowrap;
+	-webkit-flex-flow:row nowrap;
+	    -ms-flex-flow:row nowrap;
+	        flex-flow:row nowrap;
 	felx-derection:row;
-	flex-wrap:nowrap;
+	-webkit-flex-wrap:nowrap;
+	    -ms-flex-wrap:nowrap;
+	        flex-wrap:nowrap;
 	margin:0 10px;
 	border-bottom: 2px solid #E1E1E1;
 }
 .tab .tab-content>figure{
-	-moz-box-flex: 1;
-	 -webkit-box-flex: 1;
 	-o-box-flex: 1;
 	-ms-flex: 1;
-	flex: 1;
+	-webkit-flex: 1;
+	        flex: 1;
 	width:1em;
 }
 .tab .tab-content>figure img{
@@ -91,14 +95,17 @@ nav>p:hover{
 	margin-bottom: 20px;
 }
 .subfield{
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
-	flex-flow:row nowrap;
+	-webkit-flex-flow:row nowrap;
+	    -ms-flex-flow:row nowrap;
+	        flex-flow:row nowrap;
 	felx-derection:row;
-	flex-wrap:nowrap;
+	-webkit-flex-wrap:nowrap;
+	    -ms-flex-wrap:nowrap;
+	        flex-wrap:nowrap;
 	width:100%;
 	padding: 10px 10px;
 	background:#fff;
@@ -106,23 +113,25 @@ nav>p:hover{
 .subfield>section{
 	text-align: center;
 	border-right: 1px solid #E1E1E1;
-	-moz-box-flex: 1;
-	 -webkit-box-flex: 1;
 	-o-box-flex: 1;
 	-ms-flex: 1;
-	flex: 1;
-	display: -webkit-box;
-	 display: -moz-box;
+	-webkit-flex: 1;
+	        flex: 1;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
-	flex-flow:column nowrap;
+	-webkit-flex-flow:column nowrap;
+	    -ms-flex-flow:column nowrap;
+	        flex-flow:column nowrap;
 	felx-derection:column;
-	flex-wrap:nowrap;
-	-webkit-box-pack: space-between;
+	-webkit-flex-wrap:nowrap;
+	    -ms-flex-wrap:nowrap;
+	        flex-wrap:nowrap;
 	-moz-justify-content: space-between;
 	-webkit-justify-content: space-between;
-	justify-content: space-between;
+	-ms-flex-pack: justify;
+	    justify-content: space-between;
 }
 .subfield>section img{
 	width:100%;
@@ -149,32 +158,37 @@ nav>p:hover{
 	color:#777777;
 }
 .module .module-content{
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
+	-webkit-flex-flow:column nowrap;
+	-ms-flex-flow:column nowrap;
 	flex-flow:column nowrap;
 	felx-derection:column;
+	-webkit-flex-wrap:nowrap;
+	-ms-flex-wrap:nowrap;
 	flex-wrap:nowrap;
 	border-top: 1px solid #E1E1E1;
 }
 .module .module-content .module-content-1{
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
-	flex-flow:row nowrap;
+	-webkit-flex-flow:row nowrap;
+	-ms-flex-flow:row nowrap;
+	 flex-flow:row nowrap;
 	felx-derection:row;
+	-webkit-flex-wrap:nowrap;
+	-ms-flex-wrap:nowrap;
 	flex-wrap:nowrap;
 }
 .module .module-content .module-content-1 .image{
-	-moz-box-flex: 1;
-	 -webkit-box-flex: 1;
 	-o-box-flex: 1;
 	-ms-flex: 1;
-	flex: 1;
+	-webkit-flex: 1;
+	 flex: 1;
 	margin:10px 10px 0 0;
 }
 .module .module-content .module-content-1 img{
@@ -183,49 +197,53 @@ nav>p:hover{
 	
 }
 .module .module-content .module-content-1 .copywriter{
-	-moz-box-flex: 1;
-	 -webkit-box-flex: 1;
 	-o-box-flex: 1;
 	-ms-flex: 1;
+	-webkit-flex: 1;
 	flex: 1;
 	margin:10px 10px 0 0;
 	text-align: center;
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
+	-webkit-flex-flow:column nowrap;
+	-ms-flex-flow:column nowrap;
 	flex-flow:column nowrap;
 	felx-derection:column;
+	-webkit-flex-wrap:nowrap;
+	-ms-flex-wrap:nowrap;
 	flex-wrap:nowrap;
-	-webkit-box-pack: space-between;
 	-moz-justify-content: space-between;
 	-webkit-justify-content: space-between;
-	justify-content: space-between;
+	-ms-flex-pack: justify;
+	    justify-content: space-between;
 }
 .module .module-content .module-content-1 .copywriter p{
 	background:#F8F8F8;
 	line-height: 100%;
 	font-size: 20px;
 	font-weight: bold;
-	-moz-box-flex: 1;
-	 -webkit-box-flex: 1;
 	-o-box-flex: 1;
 	-ms-flex: 1;
-	flex: 1;
+	-webkit-flex: 1;
+	 flex: 1;
 	margin-bottom: 5%;
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
+	-webkit-flex-flow:column nowrap;
+	 -ms-flex-flow:column nowrap;
 	flex-flow:column nowrap;
 	felx-derection:column;
+	-webkit-flex-wrap:nowrap;
+	-ms-flex-wrap:nowrap;
 	flex-wrap:nowrap;
-	-webkit-box-pack: center;
 	-moz-justify-content: center;
 	-webkit-justify-content: center;
-	justify-content: center;
+	-ms-flex-pack: center;
+	 justify-content: center;
 }
 .module .module-content .module-content-1 .copywriter p span{
 }
@@ -236,55 +254,63 @@ nav>p:hover{
 	margin-top: 20px;
 	background:#fff;
 	padding:0 10px;
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
+	-webkit-flex-flow:column nowrap;
+	-ms-flex-flow:column nowrap;
 	flex-flow:column nowrap;
 	felx-derection:column;
-	flex-wrap:nowrap;
+	-webkit-flex-wrap:nowrap;
+	-ms-flex-wrap:nowrap;
+	 flex-wrap:nowrap;
 }
 .article-area .article{
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
+	-webkit-flex-flow:row nowrap;
+	 -ms-flex-flow:row nowrap;
 	flex-flow:row nowrap;
 	felx-derection:row;
-	flex-wrap:nowrap;
+	-webkit-flex-wrap:nowrap;
+	 -ms-flex-wrap:nowrap;
+	 flex-wrap:nowrap;
 	padding:10px 0;
 	border-bottom: 1px solid #E1E1E1;
 }
 .article-area .article .image{
 	moz-box-flex: 1;
-	 -webkit-box-flex: 1;
 	-o-box-flex: 1;
 	-ms-flex: 1;
-	flex: 1;
+	-webkit-flex: 1;
+	 flex: 1;
 	margin-right: 1em;
 }
 .article-area .article img{
 	width:100%;
 }
 .article-area .article section{
-	-moz-box-flex: 2;
-	 -webkit-box-flex: 2;
 	-o-box-flex: 2;
 	-ms-flex: 2;
-	flex: 2;
-	display: -webkit-box;
-	 display: -moz-box;
+	-webkit-flex: 2;
+	 flex: 2;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
+	-webkit-flex-flow:column nowrap;
+	-ms-flex-flow:column nowrap;
 	flex-flow:column nowrap;
 	felx-derection:column;
-	flex-wrap:nowrap;
-	-webkit-box-pack: space-between;
+	-webkit-flex-wrap:nowrap;
+	-ms-flex-wrap:nowrap;
+	  flex-wrap:nowrap;
 	-moz-justify-content: space-between;
 	-webkit-justify-content: space-between;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
 }
 .article-area  h2{
@@ -295,25 +321,27 @@ nav>p:hover{
 	color:#C9C9C9;
 }
 .article-area .last-article section{
-	display: -webkit-box;
-	 display: -moz-box;
 	 display: -o-box;
 	display: -ms-flexbox;
+	 display: -webkit-flex;
 	 display: flex;
-	flex-flow:row nowrap;
+	-webkit-flex-flow:row nowrap;
+	 -ms-flex-flow:row nowrap;
+	 flex-flow:row nowrap;
 	felx-derection:row;
-	flex-wrap:nowrap;
-	-webkit-box-pack: space-between;
+	-webkit-flex-wrap:nowrap;
+	-ms-flex-wrap:nowrap;
+	 flex-wrap:nowrap;
 	-moz-justify-content: space-between;
 	-webkit-justify-content: space-between;
-	justify-content: space-between;
+	-ms-flex-pack: justify;
+	    justify-content: space-between;
 }
 .article-area .last-article section .image{
-	-moz-box-flex: 1;
-	 -webkit-box-flex: 1;
 	-o-box-flex: 1;
 	-ms-flex: 1;
-	flex: 1;
+	-webkit-flex: 1;
+	        flex: 1;
 	margin-right: 1em;
 }
 .article-area .last-article section .image:last-child{
