--- a/task1/task011/style.css
+++ b/task1/task011/style.css
@@ -30,23 +30,18 @@ header>span{
 }
 nav{
 	height:70px;
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:row nowrap;
-	-ms-flex-flow:row nowrap;
-	-moz-flex-flow:row nowrap;
-	flex-flow:row nowrap;
+	    -ms-flex-flow:row nowrap;
+	        flex-flow:row nowrap;
 	background:#fff;
 }
 nav>p{
-	-o-box-flex: 1;
-	-ms-flex: 1;
-	-webkit-flex: 1;
-	-moz-box-flex: 1;
-	flex: 1;
+	-webkit-flex:1;
+	    -ms-flex:1;
+	        flex:1;
 	text-align: center;
 	line-height: 70px;
 	font-size: 20px;
@@ -64,24 +59,19 @@ nav>p:hover{
 	background:#fff;
 }
 .tab .tab-content{
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: flex;
-	  display: -moz-box;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:row nowrap;
-	 -ms-flex-flow:row nowrap;
-	 -moz-flex-flow:row nowrap;
-	 flex-flow:row nowrap;
+	    -ms-flex-flow:row nowrap;
+	        flex-flow:row nowrap;
 	margin:0 10px;
 	border-bottom: 2px solid #E1E1E1;
 }
 .tab .tab-content>figure{
-	-o-box-flex: 1;
-	-ms-flex: 1;
-	-webkit-flex: 1;
-	-moz-box-flex: 1;
-	flex: 1;
+	-webkit-flex:1;
+	    -ms-flex:1;
+	        flex:1;
 	width:1em;
 }
 .tab .tab-content>figure img{
@@ -93,16 +83,12 @@ nav>p:hover{
 	margin-bottom: 20px;
 }
 .subfield{
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-webkit-flex;
+	display:-ms-flexbox;
+	display:flex;
 	-webkit-flex-flow:row nowrap;
-	-ms-flex-flow:row nowrap;
-	-moz-flex-flow:row nowrap;
-	flex-flow:row nowrap;
-
+	    -ms-flex-flow:row nowrap;
+	        flex-flow:row nowrap;
 	width:100%;
 	padding: 10px 10px;
 	background:#fff;
@@ -110,24 +96,19 @@ nav>p:hover{
 .subfield>section{
 	text-align: center;
 	border-right: 1px solid #E1E1E1;
-	-o-box-flex: 1;
-	-ms-flex: 1;
-	-webkit-flex: 1;
-	-moz-box-flex: 1;
-	 flex: 1;
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	-webkit-flex:1;
+	    -ms-flex:1;
+	        flex:1;
+	display:-webkit-flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flow;
 	-webkit-flex-flow:column nowrap;
-	-ms-flex-flow:column nowrap;
-	-moz-flex-flow:column nowrap;
-	flex-flow:column nowrap;
-	-moz-justify-content: space-between;
-	-webkit-justify-content: space-between;
-	-ms-flex-pack: justify;
-	 justify-content: space-between;
+	    -ms-flex-flow:column nowrap;
+	        flex-flow:column nowrap;
+	-webkit-justify-content:space-between;
+	    -ms-flex-pack:justify;
+	        justify-content:space-between;
 }
 .subfield>section img{
 	width:100%;
@@ -154,34 +135,26 @@ nav>p:hover{
 	color:#777777;
 }
 .module .module-content{
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:column nowrap;
-	-ms-flex-flow:column nowrap;
-	-moz-flex-flow:rcolumn nowrap;
-	flex-flow:column nowrap;
+	    -ms-flex-flow:column nowrap;
+	        flex-flow:column nowrap;
 	border-top: 1px solid #E1E1E1;
 }
 .module .module-content .module-content-1{
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:row nowrap;
-	-ms-flex-flow:row nowrap;
-	-moz-flex-flow:row nowrap;
-	 flex-flow:row nowrap;
+	    -ms-flex-flow:row nowrap;
+	        flex-flow:row nowrap;
 }
 .module .module-content .module-content-1 .image{
-	-o-box-flex: 1;
-	-ms-flex: 1;
-	-webkit-flex: 1;
-	-moz-box-flex: 1;
-	 flex: 1;
+	-webkit-flex:1;
+	    -ms-flex:1;
+	        flex:1;
 	margin:10px 10px 0 0;
 }
 .module .module-content .module-content-1 img{
@@ -190,51 +163,39 @@ nav>p:hover{
 	
 }
 .module .module-content .module-content-1 .copywriter{
-	-o-box-flex: 1;
-	-ms-flex: 1;
-	-webkit-flex: 1;
-	-moz-box-flex: 1;
-	flex: 1;
+	-webkit-flex:1;
+	    -ms-flex:1;
+	        flex:1;
 	margin:10px 10px 0 0;
 	text-align: center;
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:column nowrap;
-	-ms-flex-flow:column nowrap;
-	-moz-flex-flow:column nowrap;
-	flex-flow:column nowrap;
-	-moz-justify-content: space-between;
-	-webkit-justify-content: space-between;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
+	    -ms-flex-flow:column nowrap;
+	        flex-flow:column nowrap;
+	-webkit-justify-content:space-between;
+	    -ms-flex-pack:justify;
+	        justify-content:space-between;
 }
 .module .module-content .module-content-1 .copywriter p{
 	background:#F8F8F8;
 	line-height: 100%;
 	font-size: 20px;
 	font-weight: bold;
-	-o-box-flex: 1;
-	-ms-flex: 1;
-	-webkit-flex: 1;
-	-moz-box-flex: 1;
-	 flex: 1;
+	-webkit-flex:1;
+	    -ms-flex:1;
+	        flex:1;
 	margin-bottom: 5%;
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:column nowrap;
-	 -ms-flex-flow:column nowrap;
-	 -moz-flex-flow:column nowrap;
-	flex-flow:column nowrap;
-	-moz-justify-content: center;
-	-webkit-justify-content: center;
-	-ms-flex-pack: center;
-	 justify-content: center;
+	    -ms-flex-flow:column nowrap;
+	        flex-flow:column nowrap;
+	-webkit-justify-content:center;
+	    -ms-flex-pack:center;
+	        justify-content:center;
 }
 .module .module-content .module-content-1 .copywriter p span{
 }
@@ -245,60 +206,45 @@ nav>p:hover{
 	margin-top: 20px;
 	background:#fff;
 	padding:0 10px;
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:column nowrap;
-	-ms-flex-flow:column nowrap;
-	-moz-flex-flow:column nowrap;
-	flex-flow:column nowrap;
+	    -ms-flex-flow:column nowrap;
+	        flex-flow:column nowrap;
 }
 .article-area .article{
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:row nowrap;
-	 -ms-flex-flow:row nowrap;
-	 -moz-flex-flow:column nowrap;
-	flex-flow:row nowrap;
+	    -ms-flex-flow:row nowrap;
+	        flex-flow:row nowrap;
 	padding:10px 0;
 	border-bottom: 1px solid #E1E1E1;
 }
 .article-area .article .image{
-	-moz-box-flex: 1;
-	-o-box-flex: 1;
-	-ms-flex: 1;
-	-webkit-flex: 1;
-	-moz-box-flex: 1;
-	 flex: 1;
-	margin-right: 1em;
+		-webkit-flex:1;
+		    -ms-flex:1;
+		        flex:1;
+		margin-right: 1em;
 }
 .article-area .article img{
 	width:100%;
 }
 .article-area .article section{
-	-o-box-flex: 2;
-	-ms-flex: 2;
-	-webkit-flex: 2;
-	-moz-box-flex: 2;
-	 flex: 2;
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	-webkit-flex:2;
+	    -ms-flex:2;
+	        flex:2;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:column nowrap;
-	-ms-flex-flow:column nowrap;
-	-moz-flex-flow:column nowrap;
-	flex-flow:column nowrap;
-	-moz-justify-content: space-between;
-	-webkit-justify-content: space-between;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
+	    -ms-flex-flow:column nowrap;
+	        flex-flow:column nowrap;
+	-webkit-justify-content:space-between;
+	    -ms-flex-pack:justify;
+	        justify-content:space-between;
 }
 .article-area  h2{
 	font-size: 22px;
@@ -308,26 +254,20 @@ nav>p:hover{
 	color:#C9C9C9;
 }
 .article-area .last-article section{
-	 display: -o-box;
-	display: -ms-flexbox;
-	 display: -webkit-flex;
-	 display: -moz-box;
-	 display: flex;
+	display:-ms-flexbox;
+	display:flex;
+	display:-webkit-flex;
 	-webkit-flex-flow:row nowrap;
-	 -ms-flex-flow:row nowrap;
-	 -moz-flex-flow:row nowrap;
+	-ms-flex-flow:row nowrap;
 	 flex-flow:row nowrap;
-	-moz-justify-content: space-between;
-	-webkit-justify-content: space-between;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
+	-webkit-justify-content:space-between;
+	-ms-flex-pack:justify;
+	 justify-content:space-between;
 }
 .article-area .last-article section .image{
-	-o-box-flex: 1;
-	-ms-flex: 1;
-	-webkit-flex: 1;
-	-moz-box-flex: 1;
-	flex: 1;
+	-webkit-flex:1;
+	    -ms-flex:1;
+	        flex:1;
 	margin-right: 1em;
 }
 .article-area .last-article section .image:last-child{
@@ -337,4 +277,3 @@ nav>p:hover{
 	width:100%;
 	margin:10px 0;
 }
-
