--- a/task1/task011/style.css
+++ b/task1/task011/style.css
@@ -39,9 +39,11 @@ nav{
 	background:#fff;
 }
 nav>p{
-	-webkit-flex:1;
-	    -ms-flex:1;
-	        flex:1;
+	-moz-box-flex: 1;
+	-webkit-box-flex: 1;
+	-o-box-flex: 1;
+	-ms-flex: 1;
+	 flex: 1;
 	text-align: center;
 	line-height: 70px;
 	font-size: 20px;
@@ -59,9 +61,11 @@ nav>p:hover{
 	background:#fff;
 }
 .tab .tab-content{
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+		    display: -moz-box;
+		    display: -o-box;
+		    display: -ms-flexbox;
+		    display: flex;
 	-webkit-flex-flow:row nowrap;
 	    -ms-flex-flow:row nowrap;
 	        flex-flow:row nowrap;
@@ -69,9 +73,11 @@ nav>p:hover{
 	border-bottom: 2px solid #E1E1E1;
 }
 .tab .tab-content>figure{
-	-webkit-flex:1;
-	    -ms-flex:1;
-	        flex:1;
+	-moz-box-flex: 1;
+	-webkit-box-flex: 1;
+	-o-box-flex: 1;
+	-ms-flex: 1;
+	 flex: 1;
 	width:1em;
 }
 .tab .tab-content>figure img{
@@ -83,9 +89,11 @@ nav>p:hover{
 	margin-bottom: 20px;
 }
 .subfield{
-	display:-webkit-flex;
-	display:-ms-flexbox;
-	display:flex;
+	display: -webkit-box;
+		    display: -moz-box;
+		    display: -o-box;
+		    display: -ms-flexbox;
+		    display: flex;
 	-webkit-flex-flow:row nowrap;
 	    -ms-flex-flow:row nowrap;
 	        flex-flow:row nowrap;
@@ -96,13 +104,16 @@ nav>p:hover{
 .subfield>section{
 	text-align: center;
 	border-right: 1px solid #E1E1E1;
-	-webkit-flex:1;
-	    -ms-flex:1;
-	        flex:1;
-	display:-webkit-flex;
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flow;
+	-moz-box-flex: 1;
+	-webkit-box-flex: 1;
+	-o-box-flex: 1;
+	-ms-flex: 1;
+	 flex: 1;
+	display: -webkit-box;
+	display: -moz-box;
+	 display: -o-box;
+	display: -ms-flexbox;
+	display: flex;
 	-webkit-flex-flow:column nowrap;
 	    -ms-flex-flow:column nowrap;
 	        flex-flow:column nowrap;
@@ -135,26 +146,32 @@ nav>p:hover{
 	color:#777777;
 }
 .module .module-content{
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -o-box;
+	display: -ms-flexbox;
+	display: flex;
 	-webkit-flex-flow:column nowrap;
 	    -ms-flex-flow:column nowrap;
 	        flex-flow:column nowrap;
 	border-top: 1px solid #E1E1E1;
 }
 .module .module-content .module-content-1{
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+	display: -moz-box;
+	 display: -o-box;
+	display: -ms-flexbox;
+	display: flex;
 	-webkit-flex-flow:row nowrap;
 	    -ms-flex-flow:row nowrap;
 	        flex-flow:row nowrap;
 }
 .module .module-content .module-content-1 .image{
-	-webkit-flex:1;
-	    -ms-flex:1;
-	        flex:1;
+	-moz-box-flex: 1;
+	-webkit-box-flex: 1;
+	-o-box-flex: 1;
+	-ms-flex: 1;
+	 flex: 1;
 	margin:10px 10px 0 0;
 }
 .module .module-content .module-content-1 img{
@@ -163,14 +180,18 @@ nav>p:hover{
 	
 }
 .module .module-content .module-content-1 .copywriter{
-	-webkit-flex:1;
-	    -ms-flex:1;
-	        flex:1;
+	-moz-box-flex: 1;
+	-webkit-box-flex: 1;
+	-o-box-flex: 1;
+	-ms-flex: 1;
+	 flex: 1;
 	margin:10px 10px 0 0;
 	text-align: center;
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+		    display: -moz-box;
+		    display: -o-box;
+		    display: -ms-flexbox;
+		    display: flex;
 	-webkit-flex-flow:column nowrap;
 	    -ms-flex-flow:column nowrap;
 	        flex-flow:column nowrap;
@@ -183,13 +204,17 @@ nav>p:hover{
 	line-height: 100%;
 	font-size: 20px;
 	font-weight: bold;
-	-webkit-flex:1;
-	    -ms-flex:1;
-	        flex:1;
+	-moz-box-flex: 1;
+	-webkit-box-flex: 1;
+	-o-box-flex: 1;
+	-ms-flex: 1;
+	 flex: 1;
 	margin-bottom: 5%;
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+		    display: -moz-box;
+		    display: -o-box;
+		    display: -ms-flexbox;
+		    display: flex;
 	-webkit-flex-flow:column nowrap;
 	    -ms-flex-flow:column nowrap;
 	        flex-flow:column nowrap;
@@ -206,17 +231,21 @@ nav>p:hover{
 	margin-top: 20px;
 	background:#fff;
 	padding:0 10px;
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+	display: -moz-box;
+	 display: -o-box;
+	display: -ms-flexbox;
+	display: flex;
 	-webkit-flex-flow:column nowrap;
 	    -ms-flex-flow:column nowrap;
 	        flex-flow:column nowrap;
 }
 .article-area .article{
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+	display: -moz-box;
+	 display: -o-box;
+	display: -ms-flexbox;
+	display: flex;
 	-webkit-flex-flow:row nowrap;
 	    -ms-flex-flow:row nowrap;
 	        flex-flow:row nowrap;
@@ -224,21 +253,27 @@ nav>p:hover{
 	border-bottom: 1px solid #E1E1E1;
 }
 .article-area .article .image{
-		-webkit-flex:1;
-		    -ms-flex:1;
-		        flex:1;
+		-moz-box-flex: 1;
+	-webkit-box-flex: 1;
+	-o-box-flex: 1;
+	-ms-flex: 1;
+	 flex: 1;
 		margin-right: 1em;
 }
 .article-area .article img{
 	width:100%;
 }
 .article-area .article section{
-	-webkit-flex:2;
-	    -ms-flex:2;
-	        flex:2;
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	-moz-box-flex: 2;
+	-webkit-box-flex: 2;
+	-o-box-flex: 2;
+	-ms-flex: 2;
+	 flex: 2;
+	display: -webkit-box;
+	display: -moz-box;
+	 display: -o-box;
+	display: -ms-flexbox;
+	display: flex;
 	-webkit-flex-flow:column nowrap;
 	    -ms-flex-flow:column nowrap;
 	        flex-flow:column nowrap;
@@ -254,9 +289,11 @@ nav>p:hover{
 	color:#C9C9C9;
 }
 .article-area .last-article section{
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+	display: -moz-box;
+	 display: -o-box;
+	display: -ms-flexbox;
+	display: flex;
 	-webkit-flex-flow:row nowrap;
 	-ms-flex-flow:row nowrap;
 	 flex-flow:row nowrap;
@@ -265,9 +302,11 @@ nav>p:hover{
 	 justify-content:space-between;
 }
 .article-area .last-article section .image{
-	-webkit-flex:1;
-	    -ms-flex:1;
-	        flex:1;
+	-moz-box-flex: 1;
+	-webkit-box-flex: 1;
+	-o-box-flex: 1;
+	-ms-flex: 1;
+	 flex: 1;
 	margin-right: 1em;
 }
 .article-area .last-article section .image:last-child{
