--- a/task1/task011/style.css
+++ b/task1/task011/style.css
@@ -30,9 +30,12 @@ header>span{
 }
 nav{
 	height:70px;
-	display:-ms-flexbox;
-	display:flex;
-	display:-webkit-flex;
+	display: -webkit-box;
+	display: -webkit-flex;
+	 display: -moz-box;
+	 display: -o-box;
+	 display: -ms-flexbox;
+	 display: flex;
 	-webkit-flex-flow:row nowrap;
 	-ms-flex-flow:row nowrap;
 	 flex-flow:row nowrap;
@@ -118,15 +121,16 @@ nav>p:hover{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-flex-flow:column nowrap;
-	    -ms-flex-flow:column nowrap;
-	        flex-flow:column nowrap;
+	 -ms-flex-flow:column nowrap;
+	lex-flow:column nowrap;
 	 flex-derection:column;
 	 -moz-box-orient:vertical;
 	 -webkit-box-orient:vertical;
 	 box-orient:vertical;
 	-webkit-justify-content:space-between;
-	    -ms-flex-pack:justify;
-	        justify-content:space-between;
+	-ms-flex-pack:justify;
+	box-pack:justify;
+	 justify-content:space-between;
 }
 .subfield>section img{
 	width:100%;
@@ -207,15 +211,16 @@ nav>p:hover{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-flex-flow:column nowrap;
-	    -ms-flex-flow:column nowrap;
-	        flex-flow:column nowrap;
+	-ms-flex-flow:column nowrap;
+	flex-flow:column nowrap;
 	 flex-derection:column;
 	 -moz-box-orient:vertical;
 	 -webkit-box-orient:vertical;
 	 box-orient:vertical;
 	-webkit-justify-content:space-between;
-	    -ms-flex-pack:justify;
-	        justify-content:space-between;
+	-ms-flex-pack:justify;
+	box-pack:justify;
+	 justify-content:space-between;
 }
 .module .module-content .module-content-1 .copywriter p{
 	background:#F8F8F8;
@@ -235,14 +240,15 @@ nav>p:hover{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-flex-flow:column nowrap;
-	    -ms-flex-flow:column nowrap;
-	        flex-flow:column nowrap;
+	-ms-flex-flow:column nowrap;
+	  flex-flow:column nowrap;
 	 flex-derection:column;
 	 -moz-box-orient:vertical;
 	 -webkit-box-orient:vertical;
 	 box-orient:vertical;
 	-webkit-justify-content:center;
 	    -ms-flex-pack:center;
+	    box-pack:center;
 	        justify-content:center;
 }
 .module .module-content .module-content-1 .copywriter p span{
@@ -305,15 +311,16 @@ nav>p:hover{
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-flex-flow:column nowrap;
-	    -ms-flex-flow:column nowrap;
-	        flex-flow:column nowrap;
+	 -ms-flex-flow:column nowrap;
+	 flex-flow:column nowrap;
 	 flex-derection:column;
 	 -moz-box-orient:vertical;
 	 -webkit-box-orient:vertical;
 	 box-orient:vertical;
 	-webkit-justify-content:space-between;
-	    -ms-flex-pack:justify;
-	        justify-content:space-between;
+	-ms-flex-pack:justify;
+	box-pack:justify;
+	justify-content:space-between;
 }
 .article-area  h2{
 	font-size: 22px;
@@ -334,6 +341,7 @@ nav>p:hover{
 	 flex-flow:row nowrap;
 	-webkit-justify-content:space-between;
 	-ms-flex-pack:justify;
+	box-pack:justify;
 	 justify-content:space-between;
 }
 .article-area .last-article section .image{
