--- a/WeatherApp/style/style.css
+++ b/WeatherApp/style/style.css
@@ -12,14 +12,14 @@ body{
     font-family: "PingFangSC-Light", "Helvetica Neue", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
 #map {
-    height:100%;
+    height:660px;
     margin:0px;
     padding:0px
 }
 
 #weatherBoard {
     width:400px;
-    height:100%;
+    height:660px;
     padding: 20px 0 0 10px;
     background:rgba(67,122,187,0.9);
     position:absolute;
